--- a/src/app/pages/inbound-asm1/inbound-asm1.component.html
+++ b/src/app/pages/inbound-asm1/inbound-asm1.component.html
@@ -120,7 +120,7 @@
             <select class="filter-select" 
                     [(ngModel)]="searchType" 
                     (change)="changeSearchType($event.target.value)">
-              <option value="materialCode">Mã Hàng</option>
+              <option value="materialCode">Hàng</option>
               <option value="batchNumber">Lô Hàng</option>
               <option value="location">Vị Trí</option>
             </select>
