--- a/src/app/pages/shipment/shipment.component.html
+++ b/src/app/pages/shipment/shipment.component.html
@@ -380,6 +380,7 @@
                 <option value="Đang soạn">Đang soạn</option>
                 <option value="Chưa Đủ">Chưa Đủ</option>
                 <option value="Đã xong">Đã xong</option>
+                <option value="Đã Check">Đã Check</option>
                 <option value="Đã Ship">Đã Ship</option>
                 <option value="Delay">Delay</option>
               </select>
