--- a/src/app/pages/fg-out/fg-out.component.scss
+++ b/src/app/pages/fg-out/fg-out.component.scss
@@ -42,6 +42,10 @@
   background-color: #ffebee !important;
 }
 
+.selected-row {
+  background-color: #e3f2fd !important;
+}
+
 .main-content {
   padding: 0;
   margin: 0;
